syntax = "proto3";

package proto.pcbook;

option go_package = "pb/";

import "memory_message.proto";
import "keyboard_message.proto";
import "processor_message.proto";
import "screen_message.proto";
import "storage_message.proto";
import "google/protobuf/timestamp.proto";

message Laptop {
  string id = 1;
  string brand = 2;
  string name = 3;
  CPU cpu = 4;
  Memory ram = 5;
  repeated GPU gpus = 6;
  repeated Storage storages = 7;
  Screen screen = 8;
  Keyboard keyboard = 9;
  oneof weight {
    double weight_kg = 10;
  }
  double price_rub = 11;
  uint32 release_year = 12;
  google.protobuf.Timestamp updated_at = 13;
}